--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
+    "react-bootstrap": "^2.7.2",
+    "react-success-popup": "^1.1.2",
+    "valid-url": "^1.0.9"
   }
 }
