--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -14,12 +15,6 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "request": "^2.88.2",
-    "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
-    "font-awesome": "^4.7.0",
-    "react-bootstrap": "^2.7.2",
-    "react-success-popup": "^1.1.2",
-    "valid-url": "^1.0.9"
+    "request": "^2.88.2"
   }
 }
